--- a/css/styles.css
+++ b/css/styles.css
@@ -10946,7 +10946,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
+  color: #256082;
   background-image: url("../assets/img/header-bg.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10956,6 +10956,7 @@ header.masthead {
 header.masthead .masthead-subheading {
   font-size: 1.6rem;
   font-weight: 300;
+  color: #CC4560;
   /* font-style: italic; */
   line-height: 1.5rem;
   margin-bottom: 25px;
@@ -10975,7 +10976,7 @@ header.masthead .masthead-heading {
     padding-bottom: 12.5rem;
   }
   header.masthead .masthead-subheading {
-    font-size: 1.6rem;
+    font-size: 2.0rem;
     /* font-style: italic; */
     line-height: 2.25rem;
     margin-bottom: 1.6rem;
