--- a/css/styles.css
+++ b/css/styles.css
@@ -2846,19 +2846,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #CC4560;
-  --bs-btn-border-color: #CC4560;
+  --bs-btn-bg: #AE3855;
+  --bs-btn-border-color: #AE3855;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #E57373;
-  --bs-btn-hover-border-color: #E57373;
+  --bs-btn-hover-bg: #8C3047;
+  --bs-btn-hover-border-color: #8C3047;
   --bs-btn-focus-shadow-rgb: 255, 208, 38;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #CC4560;
-  --bs-btn-active-border-color: #CC4560;
+  --bs-btn-active-bg: #AE3855;
+  --bs-btn-active-border-color: #AE3855;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #CC4560;
-  --bs-btn-disabled-border-color: #CC4560;
+  --bs-btn-disabled-bg: #AE3855;
+  --bs-btn-disabled-border-color: #AE3855;
 }
 
 .btn-secondary {
@@ -10866,8 +10866,8 @@ p {
 }
 
 .btn-social {
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 2.4rem;
+  width: 2.4rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -10956,7 +10956,7 @@ header.masthead {
 header.masthead .masthead-subheading {
   font-size: 1.6rem;
   font-weight: 300;
-  color: #CC4560;
+  color: #AE3855;
   /* font-style: italic; */
   line-height: 1.5rem;
   margin-bottom: 25px;
@@ -11003,7 +11003,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  background: rgba(204, 69, 96, 0.9);
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -11227,11 +11227,11 @@ header.masthead .masthead-heading {
   .timeline > li .timeline-panel {
     padding: 0 20px 20px 100px;
   }
-  .timeline > li .timeline-image {
+  /* .timeline > li .timeline-image {
     width: 170px;
     height: 170px;
     margin-left: -85px;
-  }
+  } */
   .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
     margin-top: 40px;
   }
