--- a/css/styles.css
+++ b/css/styles.css
@@ -10946,8 +10946,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #256082;
-  background-image: url("../assets/img/header-bg.png");
+  color: #C2DCEB;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10957,7 +10956,6 @@ header.masthead .masthead-subheading {
   font-size: 1.6rem;
   font-weight: 300;
   color: #AE3855;
-  /* font-style: italic; */
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
