Update subtitle colors in header

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,7 @@
   background-color: #1C4B65;
 }
 #mainNav.navbar-shrink .nav-link {
-  color: #f5f5ef !important;
+  color: #DFD3D6 !important;
 }
 
 /* Content */
