--- a/css/styles.css
+++ b/css/styles.css
@@ -10904,7 +10904,7 @@ p {
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ffc800;
+  color: #AE3855
 }
 
 @media (min-width: 992px) {
@@ -10946,7 +10946,8 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #C2DCEB;
+  /* color: #C2DCEB; */
+  color: #DBD0D3;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10955,7 +10956,6 @@ header.masthead {
 header.masthead .masthead-subheading {
   font-size: 1.6rem;
   font-weight: 300;
-  color: #AE3855;
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
