--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,9 @@
   --bs-link-hover-color: #AE3855;
 }
 
+.nav-link {
+  color: #C2DCEB !important;
+}
 .nav-link:hover {
   color: #AE3855 !important;
 }
@@ -12,10 +15,41 @@
 #mainNav.navbar-shrink {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #1C4B65;
+  background-color: rgba(33, 37, 41, 0.9);
 }
 #mainNav.navbar-shrink .nav-link {
   color: #DFD3D6 !important;
+}
+
+/* Navbar */
+#mainNav {
+  background-color: rgba(33, 37, 41, 0.6);
+}
+
+#mainNav .navbar-brand img {
+  height: 2.4rem !important;
+}
+
+.navbar-toggler {
+  color: #f5f5ef !important;
+  background-color: #212529;;
+}
+
+@media (min-width: 992px) {
+  #mainNav .navbar-brand img {
+    height: 3.2rem !important;
+  }
+  #mainNav.navbar-shrink {
+    background-color: rgba(33, 37, 41, 0.9);
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-nav {
+    width: auto;
+    text-align: end;
+    padding-left: 2rem !important;
+  }
 }
 
 /* Content */
