--- a/css/styles.css
+++ b/css/styles.css
@@ -3821,11 +3821,13 @@ textarea.form-control-lg {
   padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
   font-size: var(--bs-navbar-toggler-font-size);
   line-height: 1;
-  color: var(--bs-navbar-color);
+  /* color: var(--bs-navbar-color); */
+  color: #f5f5ef !important;
   background-color: transparent;
   border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
   border-radius: var(--bs-navbar-toggler-border-radius);
   transition: var(--bs-navbar-toggler-transition);
+  background-color: #212529;;
 }
 @media (prefers-reduced-motion: reduce) {
   .navbar-toggler {
