--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./styles/header.css";
 /* @import "./styles/styles.css";
 @import "./styles/custom.css"; */
 
@@ -16,13 +17,21 @@
   line-height: 1.5;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--ys-white);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  color: var(--ys-white);
+}
+
+h2 {
+  color: var(--ys-crimson);
 }
 
 button,
