--- a/app/src/style.css
+++ b/app/src/style.css
@@ -62,28 +62,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  color: var(--ys-grey-100);
-}
-
-h2 {
-  color: var(--ys-primary-500);
-}
-
-button,
-.btn {
-  color: var(--ys-grey-100);
-  background-color: var(--ys-primary-500);
-  padding: 1.25rem 2.5rem;
-  margin: 2.5rem;
-  border-radius: 0.375rem;
-  font-size: 1.125rem;
-  font-weight: 700;
-}
-
-button:hover,
-.btn:hover {
-  background-color: var(--ys-primary-500-dark);
+html, body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 #app {
@@ -99,7 +80,45 @@ button:hover,
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: var(--ys-grey-100);
-  }
+}
+
+h1 {
+  color: var(--ys-grey-100);
+}
+
+h2 {
+  color: var(--ys-primary-500);
+}
+
+.btn {
+  color: var(--ys-grey-100);
+  background-color: var(--ys-primary-500);
+  padding: 1.25rem 2.5rem;
+  margin: 2.5rem;
+  border-radius: 0.375rem;
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+
+button:hover,
+.btn:hover {
+  background-color: var(--ys-primary-500-dark);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgba(var(--ys-grey-600-rgb), 0.2);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(var(--ys-primary-600-rgb), 0.9),
+    rgba(var(--ys-primary-500-rgb), 0.9),
+    rgba(var(--ys-primary-600-rgb), 0.9)
+  );
+  border-radius: 8px;
 }
